Fixed some filtering, made a better looking scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Basic Scrollbar Styling */
+::-webkit-scrollbar {
+  width: 8px; /* Adjust width as needed */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #474758; /* Base thumb color (adjust as needed) */
+  border-radius: 4px; /* Rounded corners */
+  transition: 0.4s ease-in-out; /* Smooth transition on hover */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #888; /* Hover color */
+}
+
+
 * {
   margin: 0;
   object-fit: none;
